# talks

./: .gitignore  Makefile  TODO.md  package-lock.json  package.json  process.sh
public/: deploying-web-apps.html  learn-to-love-your-logs.html  ruthless-simplicity.html  the-web-platform.html  type-safe-openapi.html  types-are-your-friends.html  writing-safe-code-with-rust.html
public/css/: reveal.css
public/learn-to-love-your-logs/: index.html
public/notes/: deploying-web-apps.html  notes.css  types-are-your-friends.html  types-are-your-friends.md
talks/deploying-web-apps/: notes.md  slides.md
talks/learn-to-love-your-logs/: slides.md
talks/ruthless-simplicity/: slides.md
talks/the-web-platform/: slides.md
talks/type-safe-openapi/: slides.md
talks/types-are-your-friends/: notes.md  slides.md
talks/types-are-your-friends/examples/: 01.js  01.ts  02.js  02.ts  03.js  03.ts
talks/types-are-your-friends/examples/api-js/: index.js  package-lock.json  package.json
talks/types-are-your-friends/examples/api-rs/: Cargo.toml
talks/types-are-your-friends/examples/api-rs/src/: main.rs
talks/types-are-your-friends/examples/api-ts/: index.ts  package-lock.json  package.json
talks/writing-safe-code-with-rust/: slides.md
types-are-your-friends/examples/: 01.js  02.js  02.ts  03.js  03.ts
types-are-your-friends/examples/api-js/: package-lock.json
types-are-your-friends/examples/api-ts/: index.ts  package-lock.json
