[package]
name = "api-rs"
version = "0.1.0"
authors = ["Seth Etter <mail@sethetter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.3"
default-features = false
features = ["json"]